# nfl-draft-efficiency

./: .gitignore  README.md  nfl_draft_efficiency_implementation_spec.md  pyproject.toml
config/: scoring.yml
data/: ap_award_vote_finishers.csv
data/cache/: ap_award_finalists.csv  games.csv
docs/: index.html  report.css  scoring-explained.md
outputs/: external_validation.csv  external_validation_issues.csv  external_validation_summary.md  metadata.json  player_scores.csv  report.html  summary.md  team_scores.csv  unmatched_players.csv
outputs/windows/10/: metadata.json  player_scores.csv  report.css  report.html  summary.md  team_scores.csv  unmatched_players.csv
outputs/windows/3/: metadata.json  player_scores.csv  report.html  summary.md  team_scores.csv  unmatched_players.csv
outputs/windows/4/: metadata.json  player_scores.csv  report.css  report.html  summary.md  team_scores.csv  unmatched_players.csv
outputs/windows/5/: metadata.json  report.html  summary.md  team_scores.csv
outputs/windows/6/: metadata.json  player_scores.csv  report.html  summary.md  team_scores.csv  unmatched_players.csv
scripts/: build_report_windows.py  render_report.py  run_pipeline.py
src/nfl_draft_efficiency/: __init__.py  aggregate.py  awards.py  cli.py  config.py  export.py  honors.py  interactive_report.py  load_data.py  normalize_ids.py  report.css  report_template.html  scoring.py  starter_model.py  teams.py  validation.py
tests/: test_aggregation.py  test_awards.py  test_config.py  test_load_data.py  test_scoring.py  test_starter_model.py  test_validation.py
(+18 files in other folders)
