[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-draft-efficiency"
version = "0.1.0"
description = "NFL draft efficiency pipeline for 2021-2025 draft classes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
]

[project.scripts]
nfl-draft-efficiency = "nfl_draft_efficiency.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
